[package]
name = "flight_api"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.1"

bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3.28"
splitter-derive = { version = "0.1.6", optional = true }
actix-web = "4.3.1"
qstring = "0.7.2"